# pybo-fastapi

./: db.py  main.py  models.py  myapi.db  pyproject.toml
crud/: answer_crud.py  question_crud.py
migrations/versions/: fec385695f40_.py
routers/: answer_router.py  question_router.py
schema/: answer_schema.py
schemas/: question_schema.py
